<resources>
  <string name="app_name">Purplecoins</string>
  <string name="expo_system_ui_user_interface_style" translatable="false">dark</string>
</resources>