enum ScreenType {
	main = "Main",
	add = "Add",
	detail = "Detail",
	edit = "Edit",
}
export default ScreenType;

